plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
    implementation project(':api')
    
    implementation 'com.google.guava:guava:32.1.3-jre'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    
    implementation 'org.openjfx:javafx-controls:17.0.8:win'
    implementation 'org.openjfx:javafx-fxml:17.0.8:win'
    implementation 'org.openjfx:javafx-graphics:17.0.8:win'
    implementation 'org.openjfx:javafx-base:17.0.8:win'
}

compileJava {
    options.encoding = 'UTF-8'
}
